--- a/less/home.less
+++ b/less/home.less
@@ -6,7 +6,6 @@
 
         nav {
             display: flex;
-            justify-content: space-between;
             align-items: center;
             background:rgba(0,0,0,0.5);
             height: 100px;
@@ -20,8 +19,10 @@
                 text-decoration: none;
                 color: #F5F7F7;
                 font-size: 2rem;
-                margin: 0 13%;
+                margin: 0 2rem;;
+                width: 30%;
                 transition: 1s;
+                text-align: center
             }
 
             @media(max-width: 800px) {
